--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>Weather App</title>
     <link
@@ -19,8 +19,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div class="container-fluid gx-0">
       <div class="row">
         <div class="col">
@@ -145,7 +145,7 @@
             </li>
             <li>
               <img src="icons/sunrise.svg" alt="sunrise icon" width="20" />
-              Sunrise: <span id="sunrise">6:30</span> 
+              Sunrise: <span id="sunrise">6:30</span>
             </li>
             <li>
               <img src="icons/sunset.svg" alt="sunset icon" width="20" />
@@ -158,7 +158,7 @@
       <!-- daily weather cards -->
       <div>
         <ul
-          class="d-flex flex-row justify-content-center align-items-center flex-wrap p-0 mt-5"
+          class="d-flex flex-row justify-content-center align-items-center flex-wrap p-0 mt-4"
         >
           <li>
             <div class="card" style="width: 8rem">
@@ -240,8 +240,16 @@
           </li>
         </ul>
       </div>
+      <footer class="footer">
+        <span>
+          <a href="https://github.com/tasha201/weather-app" target="_blank" class="github-link"
+            > Open-source code 
+          </a>
+            by Natalia Pavlyk
+        </span>
+      </footer>
     </div>
 
     <script src="src/script.js"></script>
-</body>
+  </body>
 </html>
