Updated footer text

--- a/index.html
+++ b/index.html
@@ -242,10 +242,11 @@
       </div>
       <footer class="footer">
         <span>
+          This Weather App was designed and coded by Natalia Pavlyk and is 
           <a href="https://github.com/tasha201/weather-app" target="_blank" class="github-link"
-            > Open-source code 
+            > open-sourced on GitHub
           </a>
-            by Natalia Pavlyk
+            and hosted on Netlify
         </span>
       </footer>
     </div>
