Changing icon names

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <li>
               <ul class="d-flex flex-row">
                 <li>
-                  <img src="icons/cloud-n.svg" alt="" width="108" />
+                  <img src="icons/02d.svg" alt="cloudy" id="icon" width="108" />
                 </li>
                 <li class="current-temp">
                   <span id="current-temperature"> 0</span>°
@@ -164,7 +164,7 @@
             <div class="card" style="width: 8rem">
               <div class="card-body">
                 <h4>Wed</h4>
-                <img src="icons/cloud-small.svg" alt="small cloud icon" />
+                <img src="icons/03d.svg" alt="small cloud icon" width="64" />
                 <div class="day-night-temp-on-card">
                   <span class="day-temp-on-card">18°C </span>
                   <hr />
@@ -177,7 +177,7 @@
             <div class="card" style="width: 8rem">
               <div class="card-body">
                 <h4>Thu</h4>
-                <img src="icons/sun-small.svg" alt="sun icon" />
+                <img src="icons/01d.svg" alt="sun icon" width="64"/>
                 <div class="day-night-temp-on-card">
                   <span class="day-temp-on-card">20°C </span>
                   <hr />
@@ -190,7 +190,7 @@
             <div class="card" style="width: 8rem">
               <div class="card-body">
                 <h4>Fri</h4>
-                <img src="icons/rain-with-sun.svg" alt="rain with sun icon" />
+                <img src="icons/10d.svg" alt="rain with sun icon" width="64" />
                 <div class="day-night-temp-on-card">
                   <span class="day-temp-on-card">16°C </span>
                   <hr />
@@ -203,7 +203,7 @@
             <div class="card" style="width: 8rem">
               <div class="card-body">
                 <h4>Sat</h4>
-                <img src="icons/rain-with-sun.svg" alt="rain with sun icon" />
+                <img src="icons/11d.svg" alt="rain with sun icon" width="64" />
                 <div class="day-night-temp-on-card">
                   <span class="day-temp-on-card">17°C </span>
                   <hr />
@@ -216,7 +216,7 @@
             <div class="card" style="width: 8rem">
               <div class="card-body">
                 <h4>Sun</h4>
-                <img src="icons/sun-small.svg" alt="sun icon" />
+                <img src="icons/50d.svg" alt="sun icon" width="64" />
                 <div class="day-night-temp-on-card">
                   <span class="day-temp-on-card">19°C </span>
                   <hr />
@@ -229,7 +229,7 @@
             <div class="card" style="width: 8rem">
               <div class="card-body">
                 <h4>Mon</h4>
-                <img src="icons/cloud-small.svg" alt="cloud icon" />
+                <img src="icons/04d.svg" alt="cloud icon" width="64" />
                 <div class="day-night-temp-on-card">
                   <span class="day-temp-on-card">17°C </span>
                   <hr />
