Adding Netlify link to index.html

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <div class="card" style="width: 8rem">
               <div class="card-body">
                 <h4>Thu</h4>
-                <img src="icons/01d.svg" alt="sun icon" width="64"/>
+                <img src="icons/01d.svg" alt="sun icon" width="64" />
                 <div class="day-night-temp-on-card">
                   <span class="day-temp-on-card">20°C </span>
                   <hr />
@@ -242,11 +242,21 @@
       </div>
       <footer class="footer">
         <span>
-          This Weather App was designed and coded by Natalia Pavlyk and is 
-          <a href="https://github.com/tasha201/weather-app" target="_blank" class="github-link"
-            > open-sourced on GitHub
+          This Weather App was designed and coded by Natalia Pavlyk and is
+          <a
+            href="https://github.com/tasha201/weather-app"
+            target="_blank"
+            class="github-link"
+          >
+            open-sourced on GitHub
           </a>
-            and hosted on Netlify
+          and
+          <a
+            href="https://dashing-puffpuff-4976f4.netlify.app/"
+            target="_blank"
+            class="github-link"
+            >hosted on Netlify</a
+          >
         </span>
       </footer>
     </div>
