Adding changes for search input

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="d-inline-flex flex-row flex-nowrap">
               <input
                 id="search-input"
-                type="text"
+                type="search"
                 placeholder="Enter a city name"
                 class="form-control input-text"
                 autofocus="on"
