Real-time forecast js

--- a/index.html
+++ b/index.html
@@ -145,102 +145,7 @@
       </ul>
 
       <!-- daily weather cards -->
-      <div id="forecast">
-        <!-- <div class="d-flex flex-row justify-content-evenly align-items-center flex-wrap p-0 mt-4">
-          <div class="card" style="width: 8rem">
-            <div class="card-body">
-              <h4 class="forecast-day">Tue</h4>
-              <img src="icons/03d.svg" alt="small cloud icon" />
-              <div class="forecast-temperature">
-                <span class="forecast-temp-max">16° </span>
-                <span class="forecast-temp-min">10° </span>
-              </div>
-            </div>
-          </div>
-          <div class="card" style="width: 8rem">
-            <div class="card-body">
-              <h4 class="forecast-day">Tue</h4>
-              <img src="icons/03d.svg" alt="small cloud icon" />
-              <div class="forecast-temperature">
-                <span class="forecast-temp-max">16° </span>
-                <span class="forecast-temp-min">10° </span>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      </div>
-        <!--<li>
-             <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <h4 class="forecast-day">Wed</h4>
-                <img src="icons/03d.svg" alt="small cloud icon" />
-                <div class="forecast-temperature">
-                  <span class="forecast-temp-max">18° </span>                 
-                  <span class="forecast-temp-min">9° </span>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <h4 class="forecast-day">Thu</h4>
-                <img src="icons/01d.svg" alt="sun icon" />
-                <div class="forecast-temperature">
-                  <span class="forecast-temp-max">20° </span>
-                  <span class="forecast-temp-min">7° </span>
-                </div>
-              </div>
-            </div>
-          </li> -->
-        <!-- <li>
-            <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <h4 class="forecast-day">Fri</h4>
-                <img src="icons/10d.svg" alt="rain with sun icon" />
-                <div class="forecast-temperature">
-                  <span class="forecast-temp-max">16° </span>
-                  <span class="forecast-temp-min">6° </span>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <h4 class="forecast-day">Sat</h4>
-                <img src="icons/11d.svg" alt="rain with sun icon" />
-                <div class="forecast-temperature">
-                  <span class="forecast-temp-max">17° </span>
-                  <span class="forecast-temp-min">8° </span>
-                </div>
-              </div>
-            </div>
-          </li> -->
-        <!-- <li>
-            <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <h4 class="forecast-day">Sun</h4>
-                <img src="icons/50d.svg" alt="sun icon" />
-                <div class="forecast-temperature">
-                  <span class="forecast-temp-max">19° </span>
-                  <span class="forecast-temp-min">10° </span>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="card" style="width: 8rem">
-              <div class="card-body">
-                <h4 class="forecast-day">Mon</h4>
-                <img src="icons/04d.svg" alt="cloud icon" />
-                <div class="forecast-temperature">
-                  <span class="forecast-temp-max">17° </span>
-                  <span class="forecast-temp-min">9° </span>
-                </div>
-              </div>
-            </div>
-          </li> -->
+      <div id="forecast"> </div>
       
       <footer class="footer">
         <span>
